[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/reaper/reaper_right_left.png" type="Texture" id=1]
[ext_resource path="res://scenes/tbd_gameplay/Reaper_independent.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=4]
radius = 21.1696

[sub_resource type="Animation" id=2]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 4 ),
"update": 1,
"values": [ 3, 4, 5 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 81.8228

[node name="ReaperIndependent" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 6
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 6.94939, 36.779 )
scale = Vector2( 0.851264, 0.889698 )
shape = SubResource( 4 )

[node name="ReaperAnimation" type="AnimationPlayer" parent="."]
anims/run_left = SubResource( 2 )
anims/run_right = SubResource( 3 )

[node name="ReaperArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ReaperArea"]
shape = SubResource( 5 )
[connection signal="area_entered" from="ReaperArea" to="." method="_on_ReaperArea_area_entered"]
[connection signal="body_entered" from="ReaperArea" to="." method="_on_ReaperArea_body_entered"]
